plugins {
    id 'java'
    id 'application'
}

group 'de.mzte'
version 'v0.1r1'

sourceCompatibility = 14

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'net.sourceforge.htmlcleaner:htmlcleaner:2.23'
    compile 'com.google.code.gson:gson:2.8.6'
}

mainClassName = 'de.mzte.mcserverinfo.Main'

//create a single Jar with all dependencies
task fatJar(type: Jar) {
    clean
    manifest {
        attributes 'Main-Class': mainClassName
    }
    archiveBaseName = 'MCServerInfo'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}
